# yral-onboarding-hello-world-counter-prakash

./: .gitignore  Cargo.toml  Dockerfile  README.md  clippy.toml  docker-compose.ha.yml  docker-compose.yml  rust-toolchain.toml  rustfmt.toml
.github/workflows/: ci.yml  deploy-infra.yml  deploy-sentry.yml  deploy.yml  failover.yml  patroni-reinit.yml  patroni-switchover.yml  rebuild-standby.yml  renew-nofeebooking-cert.yml  restart-patroni.yml  restart-sentry.yml  switchover-drill.yml  verify-reusable.yml
caddy/: Caddyfile  Caddyfile.template
crates/adapter-config-env/: Cargo.toml
crates/adapter-config-env/src/: lib.rs
crates/adapter-counter-store-memory/: Cargo.toml
crates/adapter-counter-store-memory/src/: lib.rs
crates/adapter-counter-store-postgres/: Cargo.toml
crates/adapter-counter-store-postgres/src/: lib.rs
crates/adapter-http-axum/: Cargo.toml
crates/adapter-http-axum/src/: handlers.rs  lib.rs  router.rs  state.rs
crates/adapter-observability-tracing/: Cargo.toml
crates/adapter-observability-tracing/src/: lib.rs
crates/application/: Cargo.toml
crates/application/src/: error.rs  lib.rs  ports.rs  service.rs
crates/bin-server/: Cargo.toml
crates/bin-server/src/: main.rs
crates/client-rust/: Cargo.toml
crates/client-rust/src/: error.rs  lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: greeting.rs  lib.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/tests/: counter_mode_memory.rs  counter_mode_postgres.rs  plain_mode.rs
crates/test-support/: Cargo.toml
crates/test-support/src/: lib.rs  postgres_harness.rs  test_app.rs
crates/types/: Cargo.toml
crates/types/src/: health.rs  hello.rs  lib.rs
docs/superpowers/plans/: 2026-04-13-yral-onboarding-hello-world-counter-prakash.md  2026-04-17-sentry-self-hosted.md
docs/superpowers/specs/: 2026-04-13-yral-onboarding-hello-world-counter-prakash-design.md
haproxy/: haproxy-ha.cfg.template  postgres-primary.cfg.template
infra/: Caddyfile.template  docker-compose.infra.yml
postgres/: Dockerfile.patroni  patroni-entrypoint.sh  patroni.yml.template  pg_hba.conf.template  postgresql.primary.conf.template  postgresql.standby.conf.template  replica-entrypoint.sh
scripts/chaos/: fill-disk.sh  kill-primary.sh  partition-node.sh  reboot-all.sh  slow-degradation.sh
scripts/deploy/: deploy-compose.sh  deploy-ha-compose.sh  deploy-infra.sh  deploy-sentry.sh  render-caddyfile.sh  render-ha-runtime.sh  render-infra-caddyfile.sh  render-postgres-runtime.sh
scripts/migration/: cutover.sh
scripts/server/: apply-firewall.sh  bootstrap-deploy-user.sh  export-caddy-managed-cert.sh  promote-postgres-standby.sh
scripts/test/: test-export-caddy-managed-cert.sh  test-rebuild-standby-workflow.sh  test-render-caddyfile.sh  test-render-infra-caddyfile.sh  test-render-postgres-runtime.sh
