[package]
name = "adapter-http-axum"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
application = { path = "../application" }
axum.workspace = true
http.workspace = true
tokio.workspace = true
types = { path = "../types" }
tower.workspace = true

[dev-dependencies]
async-trait.workspace = true
serde_json.workspace = true
