[package]
name = "adapter-observability-tracing"
edition.workspace = true
license.workspace = true
version.workspace = true

[features]
default = ["sentry"]
sentry = ["dep:sentry"]

[dependencies]
sentry = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "registry"] }
