[package]
name = "client-rust"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
reqwest.workspace = true
serde.workspace = true
thiserror.workspace = true
types = { path = "../types" }
url.workspace = true

[dev-dependencies]
axum.workspace = true
http.workspace = true
serde_json.workspace = true
tokio.workspace = true
