[package]
name = "test-support"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
adapter-counter-store-memory = { path = "../adapter-counter-store-memory" }
adapter-counter-store-postgres = { path = "../adapter-counter-store-postgres" }
adapter-http-axum = { path = "../adapter-http-axum" }
application = { path = "../application" }
axum.workspace = true
tokio.workspace = true
